<resources>
    <string name="app_name">PhotoGalleryApp</string>
    <string name="search">Search</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="main_display_of_images">Main Display of Images</string>
    <string name="take_picture">Take Picture</string>
    <string name="edit">Edit</string>
    <string name="caption">Caption</string>
    <string name="keywords">Keywords</string>
    <string name="end_date">End date</string>
    <string name="start_date">Start date</string>
    <string name="topleft">Top Left</string>
    <string name="bottomright">Bottom Right</string>
</resources>
